Prevent animated text from stretching screen

--- a/src/styles/_AboutPage.scss
+++ b/src/styles/_AboutPage.scss
@@ -1,5 +1,7 @@
 .AboutPage {
   grid-template-rows: repeat(9, var(--grid-height));
+  width: 100%;
+  overflow-x: hidden;
   .hi {
     font-weight: 300;
     font-size: 1rem;
